Playing around with design

--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -21,17 +21,17 @@
   --gray800: #1d2939;
   --gray900: #101828;
 
-  --primary25: #E3F2FD;
-  --primary50: #E3F2FD;
-  --primary100: #BBDEFB;
-  --primary200: #90CAF9;
-  --primary300: #64B5F6;
-  --primary400: #42A5F5;
-  --primary500: #2196F3;
-  --primary600: #1E88E5;
-  --primary700: #1976D2;
-  --primary800: #1565C0;
-  --primary900: #0D47A1;
+  --primary25: #E8EAF6;
+  --primary50: #E8EAF6;
+  --primary100: #C5CAE9;
+  --primary200: #9FA8DA;
+  --primary300: #7986CB;
+  --primary400: #5C6BC0;
+  --primary500: #3F51B5;
+  --primary600: #3949AB;
+  --primary700: #303F9F;
+  --primary800: #283593;
+  --primary900: #1A237E;
 
   --error25: #fffbfa;
   --error50: #fef3f2;
