--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colossus Cosmology Calculator</title>
+    <title>Cosmology Calculator</title>
     <link
       rel="stylesheet"
       type="text/css"
